--- a/styles.css
+++ b/styles.css
@@ -5,61 +5,48 @@
      box-sizing: border-box; 
 }
 
-html { 
-
-}
-
-/* ff3f60 */
-
 body {
     font-size: 1.2em;
     line-height: 1.5em;
     color: #000;
     background-color: #fff;
     font-family: 'EB Garamond', serif;
-    /* font-family: 'Ubuntu', sans-serif; */
-    /* font-family: 'Shadows Into Light', cursive; */
 }
 
 .content {
-    /* background-color: #fef; */
     width: 1100px;
-    margin: auto;
+    margin: 3em auto;
 }
 
 .flap {
-    border: 3.0px solid #fff;
+    width: 181px;
+    height: 130px;
     background-color: #eeeeee;
-    width: 250px;
-    height: 120px;
-    margin: 0px 0px 0px 0px;
-    padding: 0.25em 0.4em;
-    display: inline-block;
-    font-size: 1.2em;
-    color: #aaa;
-    text-align: left;
-    vertical-align: middle;
+    padding: 0px;
+    float: left;
+    margin: 0px 2px 2px 0px;
+}
+
+.flap p {
+    text-align: center;
+    /* vertical-align: middle; */
+    font-size: 2em;
+    color: rgba(150, 30, 40, 0.2);
 }
 
 a:hover .flap {
-    border: 3px solid #ddd;
-}
-
-.open-1 {
-    color: #fff;
-    background-image: url("img/fish.jpg");
-}
-
-.open-2 {
-    color: #fff;
-    background-image: url("img/ottoman.jpeg");
+    -ms-transform: rotate(-3deg);
+    -webkit-transform: rotate(-3deg);
+    transform: rotate(-3deg);
 }
 
 .label {
-    background-color: #000;
-    padding: 0.0em 0.5em 0.3em 2em;
+    color: white;
+    background-color: black;
+    padding: 0.1em 0.5em 0.3em 0.5em;
     position: relative;
     top: 15px;
-    left: -9px;
+    left: 0px;
+    font-size: 0.9em;
     display: inline-block;
 }
