--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,18 @@ body {
     line-height: 1.5em;
     color: #000;
     background-color: #fff;
-    font-family: 'EB Garamond', serif;
+    font-family: 'EB Garamond', 'Baskerville', serif;
+    /* 'American Typewriter', 'Gill Sans',  */
+}
+
+h1 {
+    text-decoration: none;
+    font-weight: 100;
 }
 
 .content {
     width: 1100px;
-    margin: 3em auto;
+    margin: 4em auto;
 }
 
 .flap {
@@ -29,9 +35,13 @@ body {
 
 .flap p {
     text-align: center;
-    /* vertical-align: middle; */
-    font-size: 2em;
-    color: rgba(150, 30, 40, 0.2);
+    margin-top: 50px;
+    font-size: 1em;
+    color: rgba(30, 30, 30, 0.2);
+}
+
+.flap:hover {
+    background-color: #ececec;
 }
 
 a:hover .flap {
@@ -43,10 +53,31 @@ a:hover .flap {
 .label {
     color: white;
     background-color: black;
-    padding: 0.1em 0.5em 0.3em 0.5em;
+    padding: 0.3em 0.5em 0.3em 0.5em;
     position: relative;
     top: 15px;
     left: 0px;
-    font-size: 0.9em;
+    font-size: 0.8em;
     display: inline-block;
+    font-weight: 100;
+    /* letter-spacing: 1.2; */
+    /* text-indent: 20px; */
+}
+
+/* used on the sub pages */
+.about {
+    margin: 0px;
+    background-color: #EEE;
+    padding: 3em;
+    bottom: 0px;
+}
+
+canvas {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 150px;
+    margin-bottom: 150px;
+    display: block;
 }
