--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,7 +23,7 @@
 	{{ page.blurb }}
       </p>
       <p>
-	<a class="back" href="/">BACK TO CALENDAR</a>
+	<a class="back" href="{{ site.baseurl }}/">BACK TO CALENDAR</a>
       </p>
     </div>
 
