--- a/styles.css
+++ b/styles.css
@@ -109,8 +109,9 @@ audio {
 }
 
 .song-cover {
-    max-width:400px;
-    display:block;
+    width: 100%;
+    max-width: 400px;
+    display: block;
     margin: auto auto 20px auto;
 }
 
