--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,8 @@ audio {
 audio {
     width: 100%;
     max-width: 440px;
+    display: block;
+    margin: auto;
 }
 
 @media only screen and (max-width: 1100px) {
