--- a/styles.css
+++ b/styles.css
@@ -125,12 +125,14 @@ audio {
 @media only screen and (max-width: 1100px) {
     .content {
 	width: 735px;
+	margin: 2em;
     }
 }
 
 @media only screen and (max-width: 750px) {
     .content {
 	width: 550px;
+	margin: 1em;
     }
 }
 
