--- a/styles.css
+++ b/styles.css
@@ -125,14 +125,18 @@ audio {
 @media only screen and (max-width: 1100px) {
     .content {
 	width: 735px;
-	margin: 2em;
+    }
+    .art-piece-bg {
+	padding: 40px;
     }
 }
 
 @media only screen and (max-width: 750px) {
     .content {
 	width: 550px;
-	margin: 1em;
+    }
+    .art-piece-bg {
+	padding: 20px;
     }
 }
 
