--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,9 @@ audio {
     .art-piece-bg {
 	padding: 40px;
     }
+    .about {
+	padding: 2em;
+    }
 }
 
 @media only screen and (max-width: 750px) {
@@ -137,6 +140,9 @@ audio {
     }
     .art-piece-bg {
 	padding: 20px;
+    }
+    .about {
+	padding: 1em;
     }
 }
 
