--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,13 @@ canvas {
     width: 100%;
 }
 
+.canvas-subtitle {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 audio {
     padding-left: 0;
     padding-right: 0;
