--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,15 @@ canvas {
     margin-right: auto;
 }
 
+.art-image {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 100%;
+}
+
 audio {
     padding-left: 0;
     padding-right: 0;
