--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,16 @@ canvas {
     width: 100%;
 }
 
+#unityPlayer {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 100%;
+    max-width: 600px;
+}
+
 .canvas-subtitle {
     padding-left: 0;
     padding-right: 0;
