--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ canvas {
     margin-right: auto;
     display: block;
     width: 100%;
-    max-width: 600px;
+    max-width: 6q00px;
 }
 
 .canvas-subtitle {
